--- a/shapeLib/Makefile
+++ b/shapeLib/Makefile
@@ -1,4 +1,4 @@
-all: libShape.a shapedemo.elf shapedemo2.elf shapedemo3.elf
+all: libShape.a
 
 CPU             = msp430g2553
 CFLAGS          = -mmcu=${CPU} -Os -I../h 
@@ -23,21 +23,3 @@ install: libShape.a
 
 clean:
 	rm -f libShape.a *.o *.elf
-
-shapedemo.elf: shapedemo.o libShape.a 
-	$(CC) $(CFLAGS) ${LDFLAGS} $^ -L../lib -lTimer -lLcd -o $@
-
-shapedemo2.elf: shapedemo2.o libShape.a 
-	$(CC) $(CFLAGS) ${LDFLAGS} $^ -L../lib -lTimer -lLcd -o $@
-
-shapedemo3.elf: shapedemo3.o libShape.a 
-	$(CC) $(CFLAGS) ${LDFLAGS} $^ -L../lib -lTimer -lLcd -o $@
-
-load: shapedemo.elf
-	msp430loader.sh $^
-
-load2: shapedemo2.elf
-	msp430loader.sh $^
-
-load3: shapedemo3.elf
-	msp430loader.sh $^
