successfully merged dimming and implemted buzzers and leds according to switches commented well, project complete

--- a/project_main/Makefile
+++ b/project_main/Makefile
@@ -5,34 +5,24 @@ LDFLAGS		= -L../lib -L/opt/ti/msp430_gcc/include/
 
 #switch the compiler (for the internal make rules)
 CC              = msp430-elf-gcc
-AS              = msp430-elf-gcc -mmcu=${CPU} -c
-
-all:aofia.elf 
-#############################################################
-aofia.elf: ${COMMON_OBJECTS} aofia.o wdt_handler.o
-	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^ -lTimer -lLcd 
-
-load: aofia.elf
-	msp430loader.sh $^
-#############################################################
-aofia1.elf: ${COMMON_OBJECTS} aofia1.o wdt_handler.o
-	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^ -lTimer -lLcd 
-
-load1: aofia1.elf
-	msp430loader.sh $^
+AS              = msp430-elf-gcc -mmcu=${CPU} -c 
 #############################################################
 #added -lp2sw, -lCircle, -lShape
-aofia_lab3.elf: ${COMMON_OBJECTS} aofia_lab3.o wdt_handler.o buzzer.o siren-assy.o
+#added buzzer.o SM.o led.o siren-assy.0
+aofia_lab3.elf: ${COMMON_OBJECTS} aofia_lab3.o wdt_handler.o buzzer.o SM.o led.o siren-assy.o
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^ -lTimer -lLcd -lp2sw -lCircle -lShape
 
-load_lab3: aofia_lab3.elf
+final: aofia_lab3.elf
 	msp430loader.sh $^
 #############################################################
 clean:
 	rm -f *.o *.elf
 #############################################################
 #buzzer dependencies
-buzzer.o: buzzer.h
+#buzzer.o: buzzer.h
 
-#SM dependencies (removed SM.o targets/dependencies and replaced it with assembly)
-#SM.o: SM.h buzzer.h aofia_lab3.h
+#led dependencies
+#led.o: led.h
+
+#SM dependencies
+#SM.o: led.h SM.h buzzer.h
